syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
    rpc GetDiscount (GetDiscountRequest) returns (CouponModel);

    rpc AddDiscount (AddDiscountRequest) returns (CouponModel);

    rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);

    rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
    string productName = 1;
}

message AddDiscountRequest {
    CouponModel coupon = 1;
}

message UpdateDiscountRequest {
    CouponModel coupon = 1;
}

message DeleteDiscountRequest {
    string productName = 1;
}

message DeleteDiscountResponse {
    bool success = 1;
}

message CouponModel {
    int32 id = 1;
    string productName = 2;
    string description = 3;
    int32 amount = 4;
}